syntax = "proto3";

// python3 -m grpc_tools.protoc -I$(pwd)/grpc/ --python_out=$(pwd)/grpc/. --pyi_out=$(pwd)/grpc/. --grpc_python_out=$(pwd)/grpc/. $(pwd)/grpc/hello-world.proto

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetPreHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
